2009-04-09 Erwann Chenede - <erwann.chenede@sun.com>

	* /usr/share/time-slider/lib/time_slider/fileversion.py:
	  removed hard dependency on external thumbnailer and meld 
	  fixes #7502

2009-04-07  Niall Power <niall.power@sun.com>

	* usr/share/time-slider/lib/time_slider/cleanupmanager.py
	* usr/share/time-slider/lib/time_slider/deletegui.py
	* usr/share/time-slider/lib/time_slider/smfmanager.py
	* usr/share/time-slider/lib/time_slider/zfs.py
	* usr/share/time-slider/lib/time_slider/zfscontroller.py:
	  Use macro substitution to specify full paths to all spawned
	  commands (zfs, zpool, svcadm, svccfg, svcprop, pfexec) so that
	  commands work independently of user's PATH environment.
	  Fixes opensolaris defect #7396

2009-03-01  Niall Power <niall.power@sun.com>

	* VERSION: bump to 0.2.6
	* Makefile: Pick up PYTHON environment variable. Enhancement for
	  fix to 6754650
	* usr/share/time-slider/lib/time_slider/setupgui.py: Allow filesystems
	  to inherit properties from their parent instead of locally tagging
	  every filesystem with the required property setting.
	* usr/share/time-slider/lib/time_slider/zfs.py: Add an "inherit" argument
	  to Filesystem.commit_state() to allow the fileystem to inherit from
	  it's parent when setting the auto-snapshot property.

2009-02-19  Takao Fujiwara  <takao.fujiwara@sun.com>

	* usr/share/time-slider/lib/time_slider/deletegui.py: updated
	the comments because translators are confused it.
	* usr/share/time-slider/lib/time_slider/snapnowui.py: updated
	the gettext "%s" so that translators can change the oder of "%s".

2009-02-05 Niall Power - <niall.power@sun.com>

	* VERSION: bump to 0.2.5
	* Makefile: don't install .pyc files, but generate them as part
	  of "install:" rule. Fixes bugster: 6754650
	* py-compile.py: Prepend "DESTDIR" to compile python bytecode
	  within the installed directory tree.
	* usr/share/time-slider/lib/time_slider/__init__.pyc: removed